--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,3 +49,5 @@ play.evolutions.enabled=false
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+lily.passwordHasher.rounds=10
