Actor system backup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,3 +51,11 @@ play.evolutions.enabled=false
 # play.evolutions.db.default.enabled=false
 
 lily.passwordHasher.rounds=10
+
+#Akka Settings
+play.akka.actor-system="Actor-lily"
+akka.default-dispatcher.fork-join-executor.pool-size-max = 64
+akka.actor.debug.receive = on
+
+#Fitbit settings
+include "fitbit.conf"
