--- a/conf/fitbit.conf
+++ b/conf/fitbit.conf
@@ -1,5 +1,11 @@
 #Oauth2
+
+firbit.api.endpoint="https://api.fitbit.com/1"
 fitbit.api.client.id=227GWC
-fitbit.api.client.secret=a61b0b32e02bede0d3c7226dbc69e3bc
+fitbit.api.client.secret=12c387e9fb71ff9eb0952356b3190e9f
 fitbit.api.authorization.uri="https://www.fitbit.com/oauth2/authorize"
+
+fitbit.api.redirect.uri="http://localhost:9000"
+fitbit.api.scope="activity%20nutrition%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight"
+
 fitbit.api.request.token.uri="https://api.fitbit.com/oauth2/token"
