Refactored code and added fitbit daily activities endpoint

--- a/conf/fitbit.conf
+++ b/conf/fitbit.conf
@@ -2,18 +2,11 @@
 
 fitbit.client.name=fitbit
 
-#firbit.api.endpoint="https://api.fitbit.com/1"
-#fitbit.api.client.id=227GWC
-#fitbit.api.client.secret=12c387e9fb71ff9eb0952356b3190e9f
-#fitbit.api.authorization.uri="https://www.fitbit.com/oauth2/authorize"
-
-#fitbit.api.redirect.uri="http://localhost:9000"
-#fitbit.api.scope="activity%20nutrition%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight"
-
-#fitbit.api.request.token.uri="https://api.fitbit.com/oauth2/token"
-
 #%s for user id
 fitbit.api.user.profile.uri="/user/%s/profile.json"
 
 #%s for user id and date
 fitbit.api.user.sleep.uri="/user/%s/sleep/date/%s.json"
+
+# daily activities
+fitbit.api.user.daily.activities.uri=/user/%s/activities/date/%s.json
