Added dynamic route

--- a/conf/fitbit.conf
+++ b/conf/fitbit.conf
@@ -7,6 +7,7 @@ fitbit.api.user.profile.uri="/user/%s/profile.json"
 
 #%s for user id and date
 fitbit.api.user.sleep.uri="/user/%s/sleep/date/%s.json"
+fitbit.api.user.sleep.goal.uri="/user/-/sleep/goal.json"
 
 # daily activities
 fitbit.api.user.daily.activities.uri=/user/%s/activities/date/%s.json
