--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,5 +57,7 @@ play.akka.actor-system="Actor-lily"
 akka.default-dispatcher.fork-join-executor.pool-size-max = 64
 akka.actor.debug.receive = on
 
+scheduler.timezone=CET
+
 #Fitbit settings
 include "fitbit.conf"
