--- a/conf/fitbit.conf
+++ b/conf/fitbit.conf
@@ -11,3 +11,6 @@ fitbit.api.user.sleep.goal.uri="/user/-/sleep/goal.json"
 
 # daily activities
 fitbit.api.user.daily.activities.uri=/user/%s/activities/date/%s.json
+
+fitbit.scheduler.invoke.hour=02
+fitbit.scheduler.invoke.mins=30
