--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,7 +46,15 @@ db.default.username=postgres
 db.default.password="123456"
 db.default.connectionTimeout=60 second
 
-ebean.default = ["com.lily.models.*"]
+db.default.jndiName=DefaultDS
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://redshift-lily.cpu0prh0lduu.eu-west-1.redshift.amazonaws.com:5439/datastore"
+#db.default.username=pvtaisne
+#db.default.password="SantEb1etreRedShift"
+
+jpa.default=defaultPersistenceUnit
+
+#ebean.default = ["com.lily.models.*"]
 
 # Evolutions
 # ~~~~~
