Worked on fitbit ui integration from UI

--- a/conf/application-prod.conf
+++ b/conf/application-prod.conf
@@ -13,3 +13,5 @@ db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://redshift-lily.cpu0prh0lduu.eu-west-1.redshift.amazonaws.com:5439/datastore"
 db.default.username=pvtaisne
 db.default.password="SantEb1etreRedShift"
+
+material.ui.callback.url="http://vps250330.ovh.net/lily/#/page/callback"
