--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,5 +73,7 @@ akka.actor.debug.receive = on
 
 scheduler.timezone=CET
 
+material.ui.callback.url="http://localhost:3000/#/page/callback"
+
 #Fitbit settings
 include "fitbit.conf"
