--- a/conf/application.conf
+++ b/conf/application.conf
@@ -75,5 +75,19 @@ scheduler.timezone=CET
 
 material.ui.callback.url="http://localhost:3000/#/page/callback"
 
+#mongodb
+morphiaplugin=enabled
+
+morphia.db.host=localhost
+morphia.id.type=Long
+morphia.db.port=27017
+morphia.db.name=test
+morphia.db.username=""
+morphia.db.password=""
+morphia.defaultWriteConcern=SAFE
+morphia.collection.upload=fs
+morphia.logger=false
+morphia.models="com.lily.mongo.models"
+
 #Fitbit settings
 include "fitbit.conf"
