Added Sleep data persistence

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,7 +81,7 @@ morphiaplugin=enabled
 morphia.db.host=localhost
 morphia.id.type=Long
 morphia.db.port=27017
-morphia.db.name=test
+morphia.db.name=lilydb
 morphia.db.username=""
 morphia.db.password=""
 morphia.defaultWriteConcern=SAFE
