Migrated to mysql

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,15 +35,15 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:mysql://localhost:3306/lily_db"
-#db.default.username=root
-#db.default.password="123456"
-
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5433/lily_db"
-db.default.username=postgres
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost:3306/lily_db"
+db.default.username=root
 db.default.password="123456"
+
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://localhost:5433/lily_db"
+#db.default.username=postgres
+#db.default.password="123456"
 db.default.connectionTimeout=60 second
 
 db.default.jndiName=DefaultDS
