--- a/conf/application-prod.conf
+++ b/conf/application-prod.conf
@@ -1,17 +1,11 @@
 include "application.conf"
 
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:mysql://localhost:3306/lily_db"
-#db.default.username=root
-#db.default.password="123456"
+db.default.url="jdbc:mysql://localhost:3306/lily_db"
+db.default.password="AGiCGiGD"
 
-#db.default.url="jdbc:mysql://localhost:3306/lily_db"
-
-#db.default.password="AGiCGiGD"
-
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://redshift-lily.cpu0prh0lduu.eu-west-1.redshift.amazonaws.com:5439/datastore"
-db.default.username=pvtaisne
-db.default.password="SantEb1etreRedShift"
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://redshift-lily.cpu0prh0lduu.eu-west-1.redshift.amazonaws.com:5439/datastore"
+#db.default.username=pvtaisne
+#db.default.password="SantEb1etreRedShift"
 
 material.ui.callback.url="http://vps250330.ovh.net/lily/#/page/callback"
