--- a/conf/fitbit.conf
+++ b/conf/fitbit.conf
@@ -14,3 +14,7 @@ fitbit.api.user.daily.activities.uri=/user/%s/activities/date/%s.json
 
 fitbit.scheduler.invoke.hour=13
 fitbit.scheduler.invoke.mins=27
+
+sleep.goal=3000
+step.goal=2000
+activity.goal=5000
