worked on monthly goal completion

--- a/conf/fitbit.conf
+++ b/conf/fitbit.conf
@@ -12,9 +12,10 @@ fitbit.api.user.sleep.goal.uri="/user/-/sleep/goal.json"
 # daily activities
 fitbit.api.user.daily.activities.uri=/user/%s/activities/date/%s.json
 
-fitbit.scheduler.invoke.hour=12
-fitbit.scheduler.invoke.mins=18
+fitbit.scheduler.invoke.hour=06
+fitbit.scheduler.invoke.mins=41
 
 sleep.goal=3000
 step.goal=2000
 activity.goal=5000
+user.active.bpm=59.5
